模板项目生成

--- a/yang-yuzigenerator-maker/pom.xml
+++ b/yang-yuzigenerator-maker/pom.xml
@@ -10,8 +10,9 @@
 
 
     <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
     <dependencies>
         <!-- https://picocli.info -->
@@ -50,6 +51,12 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.7.0</version> <!-- 将LATEST或RELEASE替换为具体版本号 -->
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
