--- a/yang-yuzi-generator-web-backend/src/main/resources/application.yml
+++ b/yang-yuzi-generator-web-backend/src/main/resources/application.yml
@@ -55,19 +55,20 @@ mybatis-plus:
       logic-delete-field: isDelete # 全局逻辑删除的实体字段名
       logic-delete-value: 1 # 逻辑已删除值（默认为 1）
       logic-not-delete-value: 0 # 逻辑未删除值（默认为 0）
-# 对象存储
-# todo 需替换配置
-cos:
-  client:
-    accessKey: xxx
-    secretKey: xxx
-    region: xxx
-    bucket: xxx
+
 # 接口文档的配置
 springdoc:
   group-configs:
     - group: 'default'
       packages-to-scan: com.yupi.web.controller
-# knife4j的增强配置，不需要增强可以不配
+# 接口文档配置
 knife4j:
   enable: true
+  openapi:
+    title: "接口文档"
+    version: 1.0
+    group:
+      default:
+        api-rule: package
+        api-rule-resources:
+          - com.yupi.web.controller
