--- a/yang-yuzi-generator-web-frontend/package.json
+++ b/yang-yuzi-generator-web-frontend/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "yang-yuzi-generator-web-frontend",
+  "name": "yupi-antd-frontend-init",
   "version": "6.0.0",
   "private": true,
-  "proxy": "http://localhost:8120",
   "description": "An out-of-box UI solution for enterprise applications",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 max build",
@@ -48,6 +47,7 @@
     "@umijs/route-utils": "^2.2.2",
     "antd": "^5.2.2",
     "classnames": "^2.3.2",
+    "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "omit.js": "^2.0.2",
@@ -63,6 +63,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/classnames": "^2.3.1",
     "@types/express": "^4.17.17",
+    "@types/file-saver": "^2.0.7",
     "@types/history": "^4.7.11",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.28",
