--- a/yang-yuzi-generator-web-backend/src/main/resources/application.yml
+++ b/yang-yuzi-generator-web-backend/src/main/resources/application.yml
@@ -24,19 +24,19 @@ spring:
     url: jdbc:mysql://localhost:3306/my_db
     username: root
     password: zxc123...
-  # Redis 配置
-  # todo 需替换配置，然后取消注释
-  #  redis:
-  #    database: 1
-  #    host: localhost
-  #    port: 6379
-  #    timeout: 5000
-  #    password: 123456
+    # Redis 配置
+    # todo 需替换配置，然后取消注释
+  redis:
+    database: 1
+    host: localhost
+    port: 6379
+    timeout: 5000
   # 文件上传
   servlet:
     multipart:
       # 大小限制
-      max-file-size: 10MB
+      max-file-size: 100MB
+      max-request-size: 100MB
 server:
   address: 0.0.0.0
   port: 8120
@@ -46,6 +46,14 @@ server:
     session:
       cookie:
         max-age: 2592000
+  tomcat:
+#    最大请求连接数，排队数量
+    max-connections: 10000
+#    最大线程数
+    threads:
+      max: 5000
+#      允许的额外接收量
+    accept-count: 1000
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: false
