--- a/yang-yuzi-generator-web-backend/src/main/resources/application.yml
+++ b/yang-yuzi-generator-web-backend/src/main/resources/application.yml
@@ -47,12 +47,12 @@ server:
       cookie:
         max-age: 2592000
   tomcat:
-#    最大请求连接数，排队数量
+    #    最大请求连接数，排队数量
     max-connections: 10000
-#    最大线程数
+    #    最大线程数
     threads:
       max: 5000
-#      允许的额外接收量
+    #      允许的额外接收量
     accept-count: 1000
 mybatis-plus:
   configuration:
@@ -80,3 +80,18 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.yupi.web.controller
+#xxL-job配置
+xxl:
+  job:
+    admin:
+      addresses: http://127.0.0.1:8080/xxl-job-admin  # xxl-job admin 地址
+    accessToken: default_token  # xxl-job 访问 token
+    executor:
+      appname: yang-yuzi-generator-web-backend  # xxl-job 执行器应用名称
+      address:   # xxl-job 执行器注册地址
+      ip: localhost  # xxl-job 执行器 IP 地址（这里其实不需要单独设置，因为已经在 address 中包含了）
+      port: 9999  # xxl-job 执行器端口
+      logpath: logs/jobhandler  # xxl-job 执行器日志路径
+      Logretentiondays: 30  # xxl-job 执行器日志保留天
+
+
